--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,39 @@
     <head>
         <meta charset="UTF-8">
         <title>Star Wars Universe Planets</title>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
+        <script src="{{url_for('static', filename='main.js')}}" defer></script>
     </head>
     <body>
-        <h1>
-           Star Wars Universe Planets
-        </h1> 
+        <div class="container">
+            <heading class="row">
+                <h1>
+                    Star Wars Universe Planets
+                </h1>
+            </heading>
+            <div class="row">
+                
+            </div>
+            <div class="row">
+                <table>
+                    <tr>
+                        {% for header in planet_keys%}
+                            <th>{{header[0]}}</th>
+                        {% endfor %}
+                        <th></th>
+                    </tr>
+                    {% for planet in planets%}
+                        <tr>
+                            {% for key in planet_keys %}
+                                <td> {{ planet[key[1]] if key[1] != "residents" else planet[key[1]]|length }}</td>
+                            {% endfor %}
+                            <td>vote buttony</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
     </body>
 </html>
