--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,10 @@
             </heading>
             <div class="row">
                 {% if prev_page != None %}
-                    <input type="button" class="btn-primary" value="Previous" data-page="{{prev_page}}">
+                    <input type="button" class="btn btn-primary page-btn" id="prev-page" value="Previous" data-page="{{prev_page}}">
                 {% endif %} 
                 {% if next_page != None %}
-                    <input type="button" class="btn-success" value="Next" data-page="{{next_page}}">
+                    <input type="button" class="btn btn-success page-btn" id="next-page" value="Next" data-page="{{next_page}}">
                 {% endif %}
             </div>
             <div class="row">
