--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
         <script src="{{url_for('static', filename='main.js')}}" defer></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>
     </head>
     <body>
         <div class="container">
@@ -41,7 +43,7 @@
                                         {% if planet[key[1]]|length == 0 %}
                                             No known residents
                                         {% else %}
-                                            <input type='button' class='btn resident-btn' value='{{planet[key[1]]|length}} Resident(s)' data-planet-url='{{planet["url"]}}'>
+                                            <input type='button' class='btn resident-btn' value='{{planet[key[1]]|length}} Resident(s)' data-residents-url='{{planet["residents"]}}' data-toggle="modal" data-target="#residents-modal">
                                         {% endif %}
                                     {% endif %}
                                 </td>
@@ -50,6 +52,41 @@
                         </tr>
                     {% endfor %}
                 </table>
+            </div>
+        </div>
+
+        <!-- Modal for residents -->
+        <div class="modal fade" id="residents-modal">
+            <div class="modal-dialog modal-lg">
+
+                <!-- Modal content for residents-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">Zzz...</button>
+                        <h4 class="modal-title" id="residents-title">Residents of</h4>
+                    </div>
+                    <div class="modal-body" id="residents-body">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Height (m)</th>
+                                    <th>Mass (kg)</th>
+                                    <th>Skin color</th>
+                                    <th>Hair color</th>
+                                    <th>Eye color</th>
+                                    <th>Birth year</th>
+                                    <th>Gender</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tbody">
+                            </tbody>
+                        </table> 
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
