--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,20 @@
     </head>
     <body>
         <div class="container">
+            <nav class="navbar navbar-default">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Planet list</a></li>
+                    <li><a href="#">Voting statistics</a></li>
+                    <li class="login-toggle" id="nav-registration"><a href="/register/">Registration</a></li>
+                    <li class="login-toggle" id="nav-login"><a href="#">Login</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="login-toggle" id="nav-logout"><a href="#">Logout</a></li>
+                    <li class="login-toggle" id="nav-user"><a href="#">user: Csingacsguk</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="container">
             <heading class="row">
                 <h1>
                     Star Wars Universe Planets
