--- a/templates/registration.html
+++ b/templates/registration.html
@@ -26,7 +26,7 @@
             </nav>
         </div>
         <div class="container">
-            <form>
+            
                 <label for="username">User name:</label>
                 <input type="text" id="username" name="username" required>
                 <br>
@@ -36,9 +36,8 @@
                 <label for="password2"> Password again:</label>
                 <input type="password" id="password2" name="password2" required>
                 <br>
-                <input type="submit" class="btn" id="reg-send">
+                <input type="button" class="btn" value="Register" id="reg-send">
                 <input type="button" class="btn" value="Back" id="back">
-            </form>
             
         </div>
     </body>
