--- a/templates/index.html
+++ b/templates/index.html
@@ -45,24 +45,28 @@
                         {% for header in planet_keys%}
                             <th>{{header[0]}}</th>
                         {% endfor %}
-                        <th></th>
                     </tr>
-                    {% for planet in planets%}
+                    {% for planet in planets %}
                         <tr>
                             {% for key in planet_keys %}
                                 <td>
-                                    {% if key[1] != "residents"%}
-                                        {{ planet[key[1]] }}
-                                    {% else %}
+                                    {% if key[1] == "surface_water" %}
+                                        {% if planet[key[1]] == "unknown" %}
+                                            unknown
+                                        {% else %}
+                                            {{ planet[key[1]] }} %
+                                        {% endif %}
+                                    {% elif key[1] == "residents" %}
                                         {% if planet[key[1]]|length == 0 %}
                                             No known residents
                                         {% else %}
                                             <input type='button' class='btn resident-btn' value='{{planet[key[1]]|length}} Resident(s)' data-residents-url='{{planet["residents"]}}' data-modal-title='Residents of {{planet["name"]}}' data-toggle="modal" data-target="#residents-modal">
                                         {% endif %}
+                                    {% else %}
+                                        {{ planet[key[1]] }}
                                     {% endif %}
                                 </td>
                             {% endfor %}
-                            <td>vote buttony</td>
                         </tr>
                     {% endfor %}
                 </table>
