--- a/templates/login.html
+++ b/templates/login.html
@@ -14,14 +14,14 @@
         <div class="container">
             <nav class="navbar navbar-default">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Planet list</a></li>
+                    <li class="active"><a href="#">Login</a></li>
                     <li><a href="#">Voting statistics</a></li>
                     <li class="login-toggle" id="nav-registration"><a href="/register/">Registration</a></li>
                     <li class="login-toggle" id="nav-login"><a href="/login/">Login</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="login-toggle" id="nav-logout"><a href="#">Logout</a></li>
-                    <li class="login-toggle" id="nav-user"><a href="#">user: Csingacsguk</a></li>
+                    <li class="login-toggle" id="nav-logout"><a href="/logout/">Logout</a></li>
+                    <li class="login-toggle" id="nav-user"><a href="#">user: {{user}}</a></li>
                 </ul>
             </nav>
         </div>
