back button works

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -36,7 +36,7 @@
                 <input type="password" id="password2" name="password2" required>
                 <br>
                 <input type="button" class="btn" value="Register" id="reg-send">
-                <input type="button" class="btn" value="Back" id="back">
+                <a href="/"> <input type="button" class="btn" value="Back" id="back"></a>
             
         </div>
     </body>
