--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
             <input type="password" id="password" name="password" required>
             <br>
             <input type="button" class="btn" value="Login" id="login">
-            <input type="button" class="btn" value="Back" id="back">
+            <a href="/"> <input type="button" class="btn" value="Back" id="back"></a>
         </div>
     </body>
 </html>
